# sherpa-onnx-2025-1217

./: .gitignore  CMakeLists.txt  MTK_RUNTIME_LOADING_GUIDE.md  MTK_SenseVoice_NPU_Integration_Guide.md  build-android-mtk.sh  build-chattts-docker.sh  build-sophon-docker.sh  test-mtk-zipformer.sh
deliver/: README.md
deliver/include/sherpa-onnx/c-api/: cxx-api.h
deliver/test_data/: run_asr.sh  run_tts.sh
sherpa-onnx/c-api/: c-api.cc  c-api.h  cxx-api.cc
sherpa-onnx/csrc/: CMakeLists.txt  offline-recognizer-impl.cc  offline-recognizer-sense-voice-mtk-impl.h  offline-recognizer-sense-voice-sophon-impl.h  offline-sense-voice-model-config.h  offline-tts-chattts-impl.h  offline-tts-chattts-model-config.cc  offline-tts-chattts-model-config.h  offline-tts-impl.cc  offline-tts-model-config.cc  offline-tts-model-config.h  online-recognizer-impl.cc  provider-config.cc  provider-config.h  provider.cc  provider.h  session.cc
sherpa-onnx/csrc/mtk/: macros.h  mtk-npu-executor.cc  mtk-npu-executor.h  mtk-npu-memory.cc  mtk-npu-memory.h  offline-ctc-greedy-search-decoder-mtk.h  offline-sense-voice-model-mtk.cc  offline-sense-voice-model-mtk.h  online-recognizer-transducer-mtk-impl.h  online-stream-mtk.cc  online-stream-mtk.h  online-transducer-decoder-mtk.h  online-transducer-greedy-search-decoder-mtk.cc  online-transducer-greedy-search-decoder-mtk.h  online-transducer-modified-beam-search-decoder-mtk.cc  online-transducer-modified-beam-search-decoder-mtk.h  online-zipformer-transducer-model-mtk.cc  online-zipformer-transducer-model-mtk.h
sherpa-onnx/csrc/sophon/: offline-ctc-greedy-search-decoder-sophon.h  offline-recognizer-sense-voice-sophon-impl.h  offline-sense-voice-model-sophon.cc  offline-sense-voice-model-sophon.h
sherpa-onnx/jni/: CMakeLists.txt  mtk-asr-jni.cc  online-recognizer.cc
sherpa-onnx/jni/java/com/xbh/usbcloneclient/: MtkAsrWrapper.java  README.md
sherpa-onnx/kotlin-api/: OfflineRecognizer.kt
test-sophon/: chattts-sophon-cxx-api.cc  chattts-sophon-tts.cc  sense-voice-sophon-pcm-asr.cc
(+22 files in other folders)
